@@ -1,3 +1,7 @@
+10 Apr 2008 coudercd
+ * use collected CFLAGS and LDFLAGS during checks (fix problems with
+   hierarchical includes or libraries).
+
 09 Apr 2008 coudercd
  * permit user data file for pmkscan.
 
